--- a/it.tests/pom.xml
+++ b/it.tests/pom.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  |  Copyright 2015 Adobe Systems Incorporated
  |
  |  Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,24 +15,20 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.renatobonfim.aem</groupId>
         <artifactId>general-arch51</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
     <artifactId>general-arch51.it.tests</artifactId>
     <name>general-arch51 - Integration Tests</name>
     <description>Integration Tests for general-arch51</description>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -56,7 +51,6 @@
             <version>1.7.36</version>
         </dependency>
     </dependencies>
-
     <profiles>
         <profile>
             <id>local</id>
@@ -65,7 +59,6 @@
                 <it.author.url>http://localhost:4502</it.author.url>
                 <it.author.user>admin</it.author.user>
                 <it.author.password>admin</it.author.password>
-
                 <!-- cloud publish service (LB) -->
                 <it.publish.url>http://localhost:4503</it.publish.url>
                 <it.publish.user>admin</it.publish.user>
@@ -90,20 +83,18 @@
                             <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
                             <systemPropertyVariables>
                                 <!-- Same properties as used when run in a AEM CI/CD pipeline -->
-                                <sling.it.configure.default.replication.agents>false</sling.it.configure.default.replication.agents>
+                                <sling.it.configure.default.replication.agents>false
+                                </sling.it.configure.default.replication.agents>
                                 <com.sun.security.enableAIAcaIssuers>true</com.sun.security.enableAIAcaIssuers>
                                 <it.logintokenauth>true</it.logintokenauth>
-
                                 <!-- Sling Testing Tools properties for configuring the test instances -->
                                 <sling.it.instances>2</sling.it.instances>
-
                                 <!-- Author service -->
                                 <sling.it.instance.url.1>${it.author.url}</sling.it.instance.url.1>
                                 <sling.it.instance.runmode.1>author</sling.it.instance.runmode.1>
                                 <sling.it.instance.adminUser.1>${it.author.user}</sling.it.instance.adminUser.1>
                                 <sling.it.instance.adminPassword.1>${it.author.password}
                                 </sling.it.instance.adminPassword.1>
-
                                 <!-- Publish service -->
                                 <sling.it.instance.url.2>${it.publish.url}</sling.it.instance.url.2>
                                 <sling.it.instance.runmode.2>publish</sling.it.instance.runmode.2>
@@ -136,7 +127,6 @@
             </build>
         </profile>
     </profiles>
-
     <build>
         <pluginManagement>
             <plugins>
